# JayAI

./: .gitignore  README.md  SESSION_STATUS.md  pyproject.toml  start-jayai-desktop.bat  start-jayai-local.bat
desktop/: main.js  package-lock.json  package.json
src/jayai/: cli.py  config.py  db.py  local_main.py  main.py  models.py  schemas.py
src/jayai/routers/: __init__.py  devices.py  local.py  projects.py  runner.py
src/jayai/services/: git_ops.py  job_manager.py  local_config.py  orchestrator.py  project_context.py  runner.py  server_api.py
src/jayai/templates/: index.html  server.html
